Add admin booking dashboard with charts, fix recent bookings logic, and improve UI