@@ -1,7 +1,6 @@
 package com.smartcampus.service;
 
 import com.smartcampus.dto.BookingDto;
-import com.smartcampus.exception.BookingConflictException;
 import com.smartcampus.exception.ResourceNotFoundException;
 import com.smartcampus.exception.ValidationException;
 import com.smartcampus.model.entity.Booking;
@@ -12,14 +11,11 @@ import com.smartcampus.repository.BookingRepository;
 import com.smartcampus.repository.ResourceRepository;
 import com.smartcampus.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class BookingServiceImpl implements BookingService {
@@ -30,30 +26,21 @@ public class BookingServiceImpl implements BookingService {
 
     @Override
     public List<BookingDto> getAllBookings() {
-        return bookingRepository.findAll()
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return bookingRepository.findAll().stream().map(this::mapToDto).toList();
     }
 
     @Override
     public List<BookingDto> getUserBookings(Long userId) {
-        return bookingRepository.findByUserId(userId)
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return bookingRepository.findByUserId(userId).stream().map(this::mapToDto).toList();
     }
 
     @Override
     public BookingDto createBooking(BookingDto dto) {
-        log.info("Creating booking for resourceId: {} by userId: {}", dto.getResourceId(), dto.getUserId());
-
         Resource resource = resourceRepository.findById(dto.getResourceId())
-                .orElseThrow(() -> new ResourceNotFoundException("Resource not found with ID: " + dto.getResourceId()));
+                .orElseThrow(() -> new ResourceNotFoundException("Resource not found"));
 
-        Long userId = dto.getUserId() != null ? dto.getUserId() : 1L;
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
+        User user = userRepository.findById(dto.getUserId())
+                .orElseThrow(() -> new ValidationException("User not found"));
 
         LocalTime start = LocalTime.parse(dto.getStartTime());
         LocalTime end = LocalTime.parse(dto.getEndTime());
@@ -62,19 +49,15 @@ public class BookingServiceImpl implements BookingService {
             throw new ValidationException("Start time must be before end time");
         }
 
-        if (start.isBefore(resource.getAvailableFrom()) || end.isAfter(resource.getAvailableTo())) {
-            throw new ValidationException("Booking time falls outside of resource available hours");
-        }
-
-        boolean isOverlapping = bookingRepository.existsOverlappingBooking(
+        boolean overlapping = bookingRepository.existsOverlappingBooking(
                 resource.getId(),
                 dto.getBookingDate(),
                 start,
                 end
         );
 
-        if (isOverlapping) {
-            throw new BookingConflictException("Resource is already booked for this time slot");
+        if (overlapping) {
+            throw new ValidationException("Selected slot is already booked");
         }
 
         Booking booking = Booking.builder()
@@ -85,55 +68,32 @@ public class BookingServiceImpl implements BookingService {
                 .endTime(end)
                 .status(BookingStatus.PENDING)
                 .purpose(dto.getPurpose())
-                .rejectionReason(null)
                 .build();
 
         return mapToDto(bookingRepository.save(booking));
     }
 
     @Override
-    public BookingDto updateBookingStatus(Long id, String status, String reason) {
+    public BookingDto updateBookingStatus(Long id, String status) {
         Booking booking = bookingRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Booking not found with ID: " + id));
+                .orElseThrow(() -> new ValidationException("Booking not found"));
 
-        BookingStatus newStatus;
         try {
-            newStatus = BookingStatus.valueOf(status.toUpperCase());
+            booking.setStatus(BookingStatus.valueOf(status.toUpperCase()));
         } catch (IllegalArgumentException e) {
-            throw new ValidationException("Invalid booking status: " + status);
-        }
-
-        if (newStatus == BookingStatus.REJECTED && (reason == null || reason.trim().isEmpty())) {
-            throw new ValidationException("Rejection reason is required when rejecting a booking");
-        }
-
-        booking.setStatus(newStatus);
-
-        if (newStatus == BookingStatus.REJECTED) {
-            booking.setRejectionReason(reason.trim());
-        } else {
-            booking.setRejectionReason(null);
+            throw new ValidationException("Invalid booking status");
         }
 
         return mapToDto(bookingRepository.save(booking));
     }
 
     @Override
-    public BookingDto cancelBooking(Long id) {
+    public void cancelBooking(Long id) {
         Booking booking = bookingRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Booking not found with ID: " + id));
-
-        if (booking.getStatus() != BookingStatus.APPROVED) {
-            throw new ValidationException("Only approved bookings can be cancelled");
-        }
+                .orElseThrow(() -> new ValidationException("Booking not found"));
 
         booking.setStatus(BookingStatus.CANCELLED);
-        return mapToDto(bookingRepository.save(booking));
-    }
-
-    @Override
-    public void deleteBooking(Long id) {
-        bookingRepository.deleteById(id);
+        bookingRepository.save(booking);
     }
 
     private BookingDto mapToDto(Booking booking) {
@@ -141,14 +101,23 @@ public class BookingServiceImpl implements BookingService {
                 .id(booking.getId())
                 .resourceId(booking.getResource().getId())
                 .resourceName(booking.getResource().getName())
+                .resourceLocation(booking.getResource().getLocation())
+                .resourceType(
+                        booking.getResource().getType() != null
+                                ? booking.getResource().getType().getName()
+                                : null
+                )
                 .userId(booking.getUser().getId())
-                .userName(booking.getUser().getUsername())
+                .userName(
+                        booking.getUser().getFullName() != null && !booking.getUser().getFullName().isBlank()
+                                ? booking.getUser().getFullName()
+                                : booking.getUser().getUsername()
+                )
                 .bookingDate(booking.getBookingDate())
                 .startTime(booking.getStartTime().toString())
                 .endTime(booking.getEndTime().toString())
                 .status(booking.getStatus().name())
                 .purpose(booking.getPurpose())
-                .rejectionReason(booking.getRejectionReason())
                 .build();
     }
 }
